added Exercises section

--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -3178,7 +3178,7 @@ As can be seen, this value is closer to the degree of our synthetic data \texttt
 \end{Shaded}
 
 \begin{verbatim}
-## Estimated Effect (revised model): 10.095828768814414
+## Estimated Effect (revised model): 10.095828768814442
 \end{verbatim}
 
 \chapter{Experimental Control and Statistical Abuse}\label{stats-abuse}
@@ -4160,8 +4160,9 @@ When approaching the first question, focus on identifying an example where:
   the underlying data are correct,
 \item
   yet aggregation, scaling, or visual encoding changes how the data are perceived.
-  Typical candidates include averages hiding variability, misleading axes in charts, heatmaps without normalization, or global indicators masking regional disparities. The key is to show that \emph{nothing is fabricated}, but interpretation is nonetheless skewed.
 \end{itemize}
+
+Typical candidates include averages hiding variability, misleading axes in charts, heatmaps without normalization, or global indicators masking regional disparities. The key is to show that \emph{nothing is fabricated}, but interpretation is nonetheless skewed.
 
 For the second question, clearly separate \textbf{data collection} from \textbf{data representation}. Ask yourself:
 
@@ -4171,21 +4172,21 @@ For the second question, clearly separate \textbf{data collection} from \textbf{
   Were the original quantities measured accurately?
 \item
   At what step does distortion enter?
-  Your explanation should make clear that the problem arises \emph{after} data collection, during transformation, aggregation, or visualisation choices. This reinforces the idea that epistemic failure often occurs downstream from measurement.
 \end{itemize}
+
+Your explanation should make clear that the problem arises \emph{after} data collection, during transformation, aggregation, or visualisation choices. This reinforces the idea that epistemic failure often occurs downstream from measurement.
 
 The third question invites you to connect epistemic distortion to \textbf{social and ethical consequences}. When thinking about biased narratives or echo chambers, consider how repeated exposure to the same distorted representation can:
 
 \begin{itemize}
 \tightlist
 \item
-  stabilise false intuitions,
-\item
   legitimise certain interpretations,
 \item
   or marginalise alternative perspectives.
-  You are not asked for a detailed sociological theory, but for a plausible mechanism linking representation to belief and action.
 \end{itemize}
+
+You are not asked for a detailed sociological theory, but for a plausible mechanism linking representation to belief and action.
 
 The final question is intentionally reflective and normative. There is no single correct answer. Instead, you should:
 
@@ -4195,8 +4196,9 @@ The final question is intentionally reflective and normative. There is no single
   articulate a criterion or threshold (e.g.~scale, repetition, authority, policy use),
 \item
   explain when representations cease to be descriptive tools and become \emph{world-shaping constructs}.
-  This question tests your ability to integrate epistemology, data practice, and ethics, rather than recall factual content.
 \end{itemize}
+
+This question tests your ability to integrate epistemology, data practice, and ethics, rather than recall factual content.
 
 Overall, approach this exercise by keeping in mind that \textbf{data visualisations are not neutral windows onto reality}. They are models and syntheses that highlight some aspects while obscuring others, and this selective emphasis is precisely where both insight and distortion originate.
 
@@ -4321,7 +4323,7 @@ Although Nightingale could not run controlled experiments or randomise condition
   Link ethical significance to \textbf{prevention capacity}, responsibility, and policy impact.
 \end{itemize}
 
-\subsubsection{The Collapse of Angkor}\label{the-collapse-of-angkor}
+\subsection{The Collapse of Angkor}\label{the-collapse-of-angkor}
 
 When French explorer \textbf{Henri Mouhot} encountered Angkor in the 19th century, he interpreted its overgrown monuments as evidence of sudden civilisational collapse. This interpretation relied heavily on visible ruins as proxies for societal vitality.
 
