--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -176,7 +176,7 @@
 % Make links footnotes instead of hotlinks:
 \DeclareRobustCommand{\href}[2]{#2\footnote{\url{#1}}}
 \hypersetup{
-  pdftitle={08-Exercises},
+  pdftitle={Applied Philosophy of Science and Data Ethics},
   pdfauthor={Dr.~Carlos Vega},
   colorlinks=true,
   linkcolor={red},
@@ -185,9 +185,9 @@
   urlcolor={blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{08-Exercises}
+\title{Applied Philosophy of Science and Data Ethics}
 \author{Dr.~Carlos Vega}
-\date{2021 - 2025: ~Last compiled: 2026-01-20}
+\date{2021 - 2026: ~Last compiled: 2026-01-20}
 
 \begin{document}
 \maketitle
@@ -3178,7 +3178,7 @@ As can be seen, this value is closer to the degree of our synthetic data \texttt
 \end{Shaded}
 
 \begin{verbatim}
-## Estimated Effect (revised model): 10.095828768814442
+## Estimated Effect (revised model): 10.095828768814414
 \end{verbatim}
 
 \chapter{Experimental Control and Statistical Abuse}\label{stats-abuse}
@@ -4148,7 +4148,7 @@ Answer the following questions.
   In your opinion, when does data stop describing reality and start constructing it?
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers}
+\textbf{How to approach the answers}
 
 This exercise is designed to help you reason about \textbf{distortion introduced by data synthesis and representation}, rather than errors in measurement or data collection. The goal is not to test geographical knowledge, but to see how \emph{true data} can still lead to \emph{false beliefs} once transformed or visualised.
 
@@ -4216,7 +4216,7 @@ Rather than choosing a location based on prestige, custom, or anecdotal reputati
 
 This approach did not involve experimental control, randomisation, or a causal theory of disease transmission. Al-Razi could not isolate variables such as temperature, insects, or humidity, nor could he test alternative explanations. Nonetheless, his method represented a deliberate attempt to \emph{compare} environments systematically using a proxy rather than speculation, authority, or superstition.
 
-\subsubsection{Questions}\label{questions}
+\textbf{Questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4233,7 +4233,7 @@ This approach did not involve experimental control, randomisation, or a causal t
   Give a modern data-science analogy to Al-Razi's approach.
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers-1}
+\textbf{How to approach the answers}
 
 \begin{itemize}
 \tightlist
@@ -4257,7 +4257,7 @@ Ibn Sina warned that recovery could result from natural healing, coincidence, or
 
 Although formal experimental methods were not yet developed, Ibn Sina articulated a core insight of modern experimental reasoning: isolated success stories are epistemically weak. Reliable knowledge requires distinguishing treatment effects from background variation.
 
-\subsubsection{Questions}\label{questions-1}
+\textbf{Questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4272,7 +4272,7 @@ Although formal experimental methods were not yet developed, Ibn Sina articulate
   Give one example of how Ibn Sina's critique applies to modern data science or machine learning.
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers-2}
+\textbf{How to approach the answers}
 
 \begin{itemize}
 \tightlist
@@ -4294,7 +4294,7 @@ Nightingale collected detailed hospital records and noticed that most deaths occ
 
 Although Nightingale could not run controlled experiments or randomise conditions, she approximated control through structured comparison. Her work demonstrated how careful aggregation and disaggregation of observational data could reveal patterns that raw numbers concealed, and her analysis directly informed policy changes that saved lives.
 
-\subsubsection{Questions}\label{questions-2}
+\textbf{Questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4309,7 +4309,7 @@ Although Nightingale could not run controlled experiments or randomise condition
   Why was Nightingale's use of data ethically significant?
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers-3}
+\textbf{How to approach the answers}
 
 \begin{itemize}
 \tightlist
@@ -4329,7 +4329,7 @@ When French explorer \textbf{Henri Mouhot} encountered Angkor in the 19th centur
 
 Later historical accounts and modern remote sensing revealed a different picture: Angkor declined gradually due to climatic stress and infrastructural strain, not sudden decay or invasion. Monument survival turned out to be a misleading proxy for social complexity and continuity.
 
-\subsubsection{Questions}\label{questions-3}
+\textbf{Questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4346,7 +4346,7 @@ Later historical accounts and modern remote sensing revealed a different picture
   Propose a data-science analogue where a convenient proxy drives a wrong narrative, and name one mitigation.
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers-4}
+\textbf{How to approach the answers}
 
 \begin{itemize}
 \tightlist
@@ -4370,7 +4370,7 @@ Goldziher challenged this view by analysing how such texts were produced. He arg
 
 Goldziher's insight was not that the data were useless, but that they measured \emph{something different} from what researchers often assumed. This distinction between data generation and target phenomenon is central to modern data science.
 
-\subsubsection{Questions}\label{questions-4}
+\textbf{Questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4387,7 +4387,7 @@ Goldziher's insight was not that the data were useless, but that they measured \
   Give a modern data-science example where data accurately reflects a process but is commonly misinterpreted as measuring a different target.
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers-5}
+\textbf{How to approach the answers}
 
 \begin{itemize}
 \tightlist
@@ -4409,7 +4409,7 @@ Without experimental confirmation or microbiological proof, Wu recommended face 
 
 The case exemplifies abductive reasoning under severe time pressure and highlights decision-making when experimental control is impossible.
 
-\subsubsection{Questions}\label{questions-5}
+\textbf{Questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4424,7 +4424,7 @@ The case exemplifies abductive reasoning under severe time pressure and highligh
   What lesson does this case provide for data science in crisis situations?
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers-6}
+\textbf{How to approach the answers}
 
 \begin{itemize}
 \tightlist
@@ -4446,7 +4446,7 @@ Lane-Claypon introduced a systematic comparison between women with breast cancer
 
 This comparative approach marked an early form of case-control reasoning and laid the groundwork for modern epidemiology, allowing researchers to distinguish coincidence from potential causal influence.
 
-\subsubsection{Questions}\label{questions-6}
+\textbf{Questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4463,7 +4463,7 @@ This comparative approach marked an early form of case-control reasoning and lai
   Why is this comparative approach ethically preferable to other types of experimentation?
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers-7}
+\textbf{How to approach the answers}
 
 \begin{itemize}
 \tightlist
@@ -4483,7 +4483,7 @@ From the late 1970s to the early 1990s, Canadian regulators relied on stock-asse
 
 Industrial fishing fleets increasingly concentrated in remaining high-density areas, masking broader collapse. Models remained statistically well-fit, but their assumptions failed under ecological change. When the collapse became undeniable, the resulting moratorium caused widespread social and economic harm.
 
-\subsubsection{Questions}\label{questions-7}
+\textbf{Questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4498,7 +4498,7 @@ Industrial fishing fleets increasingly concentrated in remaining high-density ar
   What non-epistemic values were in tension when setting quotas (name two)?
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers-8}
+\textbf{How to approach the answers}
 
 \begin{itemize}
 \tightlist
@@ -4520,7 +4520,7 @@ From a statistical perspective, the evidence was weak and noisy; from an experim
 
 In hindsight, his warning proved correct. The case highlights the tension between epistemic standards and ethical responsibility under uncertainty.
 
-\subsubsection{Questions}\label{questions-8}
+\textbf{Questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4537,7 +4537,7 @@ In hindsight, his warning proved correct. The case highlights the tension betwee
   What does this case teach about decision-making under uncertainty in high-stakes data-driven systems?
 \end{enumerate}
 
-\subsubsection{How to approach the answers}\label{how-to-approach-the-answers-9}
+\textbf{How to approach the answers}
 
 \begin{itemize}
 \tightlist
